@@ -9,12 +9,14 @@ Build.bat
 .last_cover_stats
 /Makefile
 /Makefile.old
+/MANIFEST
 /MANIFEST.bak
 /META.yml
 /META.json
 /MYMETA.*
 nytprof.out
 /pm_to_blib
+*.tar.gz
 *.o
 *.bs
 /_eumm/
