@@ -7,6 +7,7 @@ blib
 cover$
 CVS
 diff$
+.git
 (?i:ignore)
 (?i:junk)
 ^MANIFEST\.
