@@ -1,10 +1,9 @@
 
-# $Id: Makefile.PL,v 1.13 2010-12-02 23:35:37 Martin Exp $
-
+use lib '.';
 use inc::Module::Install;
 
 all_from('lib/Lingua/Alphabet/Phonetic.pm');
-version(0.103);
+version(1.11);
 
 install_script('phonetize');
 clean_files('phonetize');
@@ -14,7 +13,7 @@ requires( perl => '5.004' );
 build_requires('File::Basename');
 test_requires('Test::More');
 test_requires('Test::Pod');
-test_recommends('Test::Pod::Coverage');
+test_requires('Test::Pod::Coverage');
 # I think there's a bug in Module::CoreList or something, because this
 # comes up missing on some platforms:
 test_requires('Test::Simple');
